Ensure menu items don't wrap.

--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -114,7 +114,7 @@
                     background-color: #fff;
                     border: 1px solid #efefef;
 
-                    min-width: 150px;
+                    white-space: nowrap;
 
                     .nav-link {
                         margin: 10px 0;
